# Agentic-System

./: .env.example  .gitignore  API_KEYS.md  BENCHMARKS_TIER1_COMPLETE.md  BENCHMARK_GAP_REPORT.md  COMPLETE_BENCHMARKING_SYSTEM.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  Makefile  PRIORITY_1_FIXES_COMPLETE.md  PRIORITY_2_3_IMPLEMENTATION.md  README.md  SECURITY.md  SETUP.md  SPEAKING_COACH.md  docker-compose.yml  main.py  pyproject.toml  quick-start.sh  requirements.txt
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: backend-tests.yml  ci-wiki.yml  docker-build.yml  web-build.yml
backend/: requirements.txt
backend/src/: auth.py  config.py  main.py
backend/tests/: conftest.py  test_auth.py  test_calls.py  test_profiles.py
benchmarks/: ALIGNMENT_AUDIT.py  BENCHMARK_RESULTS.md  README.md  alignment_report.json
benchmarks/_common/: __init__.py  metrics.py  parsers.py
benchmarks/bfcl-faithful/: ast_checker.py  evaluate.py  results.json  test_cases.json  test_checker.py  wiki_functions.py
benchmarks/cost-efficiency/: analyze_costs.py  report.json
benchmarks/parameter-correctness/: README.md  __init__.py  leaderboard.py  test_cases.json
benchmarks/runner/: __init__.py  (+8 more)
ci_wiki/: config.py  db.py  models.py
schema/: financials_sidecar.schema.json  wiki_schema.md
tests/: conftest.py  test_bm25_search.py  test_cli.py  test_db.py  test_financials_schema.py  test_ingest.py  test_lint.py  test_page.py  test_parsers.py  test_query.py  test_ratelimit.py
web/: index.html  package.json  tsconfig.json
wiki/: index.md  log.md
(+97 files in other folders)
