[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-wiki"
version = "0.1.0"
description = "Competitive intelligence wiki powered by LLM compilation"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.20.0",
    "requests>=2.33.0",
    "PyYAML>=6.0",
    "anthropic>=0.40.0,<1.0.0",
    "python-dotenv>=1.0,<2.0",
    "datasets>=2.16,<4.0",
    "jsonschema>=4.20,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ci_wiki*"]
